Fix:Updated spacing of items in header

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between; /* Space between the items */
     align-items: center;           /* Vertically centre the content */
     width: 100%;                   /* Full width of the parent */
-    padding: 1vmin 2vmin;          /* 1vmin for top/bottom, 2vmin for left/right */
+    padding: 1vmin 4vmin 1vmin 2vmin;
     background-color: #1E3A61;     /* Background colour */
     box-sizing: border-box; /* Ensure padding is respected */
 }
